spacing issue  and centering the main text

--- a/src/frontend/custom_styles.css
+++ b/src/frontend/custom_styles.css
@@ -47,7 +47,7 @@
     text-decoration: none !important;
     width: 30px;
     margin-right: 10px;
-    margin-botto
+    margin-bottom:5px;
 }
 
 a {
